<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent"
  >

    <ImageView
        android:id="@+id/bl_logo"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp120"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp50"
        android:src="@drawable/splashlogo"/>

    <RelativeLayout
        android:id="@+id/textlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bl_logo"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30"
        android:layout_marginTop="@dimen/dp50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/text_color_normal"
            android:textSize="@dimen/sp15"/>

        <LinearLayout
            android:id="@+id/signupclick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/text_color_linked"
                android:textSize="@dimen/sp15"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/text_color_linked"/>

        </LinearLayout>

    </RelativeLayout>

<LinearLayout
    android:id="@+id/edittextlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textlayout"
    android:paddingTop="@dimen/dp20"
    android:paddingRight="@dimen/dp30"
    android:paddingLeft="@dimen/dp30"
    android:paddingBottom="@dimen/dp20"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:hint="@string/phone_number"
        android:textSize="@dimen/sp13"
        android:textColorHint="@color/text_color_hint"
        android:singleLine="true"
        android:inputType="phone"
        android:background="@null"
        android:paddingRight="@dimen/dp15"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/normal_line_background"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:background="@null"
            android:hint="@string/password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/text_color_hint"
            android:layout_toLeftOf="@+id/forgottext"
            android:textSize="@dimen/sp13"
            android:paddingRight="@dimen/dp15"
            />

        <TextView
            android:id="@+id/forgottext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/text_color_normal"
            android:text="@string/forgot_password"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/normal_line_background"/>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:background="@drawable/login_round_shape"
        android:layout_marginTop="@dimen/dp25"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/sp15"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittextlayout"
        android:layout_above="@+id/bottomline"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_marginRight="@dimen/dp30"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_connect_with"
            android:textSize="@dimen/sp13"
            android:textColor="@color/text_color_normal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp20"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/facebook"/>

            <ImageView
                android:layout_width="@dimen/dp50"
                android:layout_height="@dimen/dp50"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/twitter"/>

            <ImageView
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:layout_alignParentRight="true"
            android:src="@drawable/googleplus"/>

        </RelativeLayout>
    </LinearLayout>


    <View
        android:id="@+id/bottomline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp7"
        android:layout_alignParentBottom="true"
        android:background="@color/headerColor"/>
</RelativeLayout>
